Quickbookmarks: Add editor context menu rn=
(integrated from master branch change 371d7a8 by cgchoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/menus.less
+++ b/src/chrome/komodo/skin/plat/shared/menus.less
@@ -148,3 +148,8 @@ menuitem[type="radiobox"] > .menu-iconic-left
 {
     visibility: hidden;
 }
+
+menuitem.go-to-bookmark[disabled="true"]
+{
+    visibility: collapse;
+}
