UI: Show border around bottom panes on windows with a dark scheme
(integrated from master branch change 9.2.1-609-g018a056 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -46,11 +46,17 @@
     }
 
 /* #if PLATFORM != "win" */
-    #workspace_bottom_area,
-    #editorvbox tabbox tabs
+    #editorvbox tabbox tabs,
+    #workspace_bottom_area
     {
         border-left: @panel-border !important;
         border-right: @panel-border !important;
+    }
+/* #else */
+    #workspace_bottom_area
+    {
+        border-left: @main-border !important;
+        border-right: @main-border !important;
     }
 /* #endif */
     
