Notify: Fix tiny notifications on Windows
(integrated from master branch change 9.2.1-610-g56aa789 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -1,6 +1,8 @@
 .notify-panel
 {
     -moz-appearance: none !important;
+    transform: none !important;
+    transition: none !important;
     -moz-binding: url("chrome://global/content/bindings/popup.xml#panel") !important;
     padding: 6px;
     color: #EEE;
