Panes: Fix icons in tabs not always showing the right icon
(integrated from master branch change 9.2.1-615-g55413b2 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -1386,12 +1386,9 @@ ko-pane[type="icons"]
 {
     tab
     {
-        .tab-icon
-        {
-            list-style-image: @icon-widget-default !important;
-        }
+        list-style-image: @icon-widget-default !important;
 
-        &[selected] .tab-icon
+        &[selected] 
         {
             list-style-image: @icon-widget-default-selected !important;
         }
