UI: Add way of closing widget tabs for non-default tab layouts - fixes #701
(integrated from master branch change 9.2.1-616-gbbcc37c by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/scrolltabs.less
+++ b/src/chrome/komodo/skin/plat/shared/scrolltabs.less
@@ -14,6 +14,23 @@ tab[type="file-tab"]
     max-width: 250px;
 }
 
+ko-pane[type="sidebar"] tabs:not([type])
+{
+    .tab-text + .tab-close-button
+    {
+        visibility: collapse;
+    }
+    
+    &[widget-id^="findresults_tabpanel"],
+    &[widget-id^="debugsession"]
+    {
+        .tab-text + .tab-close-button
+        {
+            visibility: visible;
+        }
+    }
+}
+
 tab[widget^="findresults_tabpanel"],
 tab[widget^="debugsession"]
 {
