UI: Fix breadcrumb margin on OSX
(integrated from master branch change 9.2.1-624-gdf8fe0f by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/breadcrumbs/skin/breadcrumbs.less
+++ b/src/modules/breadcrumbs/skin/breadcrumbs.less
@@ -15,6 +15,7 @@
         position: relative;
         padding: 0 !important;
         margin-left: 0 !important;
+        margin-right: 0 !important;
         
         &:empty
         {
