UI: Fix pixelated fonts in sidebars when using Komodo on OSX with a Retina screen rn=
(integrated from master branch change 9.2.1-627-g2ff0a1a by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/mac/panes.less
+++ b/src/chrome/komodo/skin/plat/mac/panes.less
@@ -2,16 +2,14 @@
 
 /* Widget toolbars */
 
-.widgetToolbarWrap
+page[containerOrient="vertical"]
 {
-    textbox[type="search"]
-    {
-        margin-top: -2px;
-    }
+    -moz-appearance: none;
+    background: transparent;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-ko-pane tabpanel,
-page[containerOrient="vertical"]
+ko-pane tabpanel
 {
     -moz-appearance: -moz-mac-vibrancy-light !important;
 }
