--- a/src/chrome/komodo/skin/komodo.p.css
+++ b/src/chrome/komodo/skin/komodo.p.css
@@ -316,28 +316,12 @@ statusbarpanel > toolbarbutton[type="menu"] > dropmarker {
 .languageicon,
 treechildren::-moz-tree-image(DefaultLanguage) {
   /* The default language icon. */
-  list-style-image: url("koicon://ko-language/Text?size=24");
-}
-menuitem.languageicon {
-  height: 32px;
-}
-menuitem.languageicon image {
-  /* Push the image to the right of the menuitem checkbox. */
-  margin-left: 24px;
-  max-width: 24px !important;
-  width: 24px !important;
-  height: 24px !important;
+  list-style-image: url("koicon://ko-language/Text");
 }
 
-menupopup menupopup menuitem.languageicon {
-  height: 24px;
-}
-menupopup menupopup menuitem.languageicon image {
+.languageicon image {
   /* Push the image to the right of the menuitem checkbox. */
-  margin-left: 16px;
-  max-width: 16px !important;
-  width: 16px !important;
-  height: 16px !important;
+  margin-left: 20px;
 }
 treechildren::-moz-tree-image(DefaultLanguage) {
   /* Put spacing around the tree images. */
@@ -347,117 +331,117 @@ treechildren::-moz-tree-image(DefaultLanguage) {
 
 .languageicon[language="ActionScript"],
 treechildren::-moz-tree-image(LanguageActionScript) {
-  list-style-image: url("koicon://ko-language/ActionScript?size=24") !important;
+  list-style-image: url("koicon://ko-language/ActionScript") !important;
 }
 .languageicon[language="C++"],
 treechildren::-moz-tree-image(LanguageC) {
-  list-style-image: url("koicon://ko-language/C++?size=24");
+  list-style-image: url("koicon://ko-language/C++");
 }
 .languageicon[language="CoffeeScript"],
 treechildren::-moz-tree-image(LanguageCoffeeScript) {
-  list-style-image: url("koicon://ko-language/CoffeeScript?size=24");
+  list-style-image: url("koicon://ko-language/CoffeeScript");
 }
 .languageicon[language="CSS"],
 treechildren::-moz-tree-image(LanguageCSS) {
-  list-style-image: url("koicon://ko-language/CSS?size=24");
+  list-style-image: url("koicon://ko-language/CSS");
 }
 .languageicon[language="Django"],
 treechildren::-moz-tree-image(LanguageDjango) {
-  list-style-image: url("koicon://ko-language/Django?size=24");
+  list-style-image: url("koicon://ko-language/Django");
 }
 .languageicon[language="EJS"],
 treechildren::-moz-tree-image(LanguageEJS) {
-  list-style-image: url("koicon://ko-language/EJS?size=24");
+  list-style-image: url("koicon://ko-language/EJS");
 }
 .languageicon[language="epMojo"],
 treechildren::-moz-tree-image(LanguageepMojo) {
-  list-style-image: url("koicon://ko-language/epMojo?size=24");
+  list-style-image: url("koicon://ko-language/epMojo");
 }
 .languageicon[language="HTML"],
 treechildren::-moz-tree-image(LanguageHTML) {
-  list-style-image: url("koicon://ko-language/HTML?size=24");
+  list-style-image: url("koicon://ko-language/HTML");
 }
 .languageicon[language="HTML5"],
 treechildren::-moz-tree-image(LanguageHTML5) {
-  list-style-image: url("koicon://ko-language/HTML5?size=24");
+  list-style-image: url("koicon://ko-language/HTML5");
 }
 .languageicon[language="JavaScript"],
 treechildren::-moz-tree-image(LanguageJavaScript) {
-  list-style-image: url("koicon://ko-language/JavaScript?size=24");
+  list-style-image: url("koicon://ko-language/JavaScript");
 }
 .languageicon[language="JSON"],
 treechildren::-moz-tree-image(LanguageJSON) {
-  list-style-image: url("koicon://ko-language/JSON?size=24");
+  list-style-image: url("koicon://ko-language/JSON");
 }
 .languageicon[language="Laravel"],
 treechildren::-moz-tree-image(LanguageLaravel),
 .languageicon[language="LaravelBlade"],
 treechildren::-moz-tree-image(LanguageLaravelBlade) {
-  list-style-image: url("koicon://ko-language/LaravelBlade?size=24");
+  list-style-image: url("koicon://ko-language/LaravelBlade");
 }
 .languageicon[language="Less"],
 treechildren::-moz-tree-image(LanguageLess) {
-  list-style-image: url("koicon://ko-language/Less?size=24");
+  list-style-image: url("koicon://ko-language/Less");
 }
 .languageicon[language="MXML"],
 treechildren::-moz-tree-image(LanguageMXML) {
-  list-style-image: url("koicon://ko-language/MXML?size=24");
+  list-style-image: url("koicon://ko-language/MXML");
 }
 .languageicon[language="Node.js"],
 treechildren::-moz-tree-image(LanguageNodejs) {
-  list-style-image: url("koicon://ko-language/Node.js?size=24");
+  list-style-image: url("koicon://ko-language/Node.js");
 }
 .languageicon[language="Perl"],
 treechildren::-moz-tree-image(LanguagePerl) {
-  list-style-image: url("koicon://ko-language/Perl?size=24");
+  list-style-image: url("koicon://ko-language/Perl");
 }
 .languageicon[language="PHP"],
 treechildren::-moz-tree-image(LanguagePHP) {
-  list-style-image: url("koicon://ko-language/PHP?size=24");
+  list-style-image: url("koicon://ko-language/PHP");
 }
 .languageicon[language="Python"],
 treechildren::-moz-tree-image(LanguagePython) {
-  list-style-image: url("koicon://ko-language/Python?size=24");
+  list-style-image: url("koicon://ko-language/Python");
 }
 .languageicon[language="Python3"],
 treechildren::-moz-tree-image(LanguagePython3) {
-  list-style-image: url("koicon://ko-language/Python3?size=24");
+  list-style-image: url("koicon://ko-language/Python3");
 }
 .languageicon[language="RHTML"],
 treechildren::-moz-tree-image(LanguageRHTML) {
-  list-style-image: url("koicon://ko-language/RHTML?size=24");
+  list-style-image: url("koicon://ko-language/RHTML");
 }
 .languageicon[language="Ruby"],
 treechildren::-moz-tree-image(LanguageRuby) {
-  list-style-image: url("koicon://ko-language/Ruby?size=24");
+  list-style-image: url("koicon://ko-language/Ruby");
 }
 .languageicon[language="Sass"],
 treechildren::-moz-tree-image(LanguageSass),
 .languageicon[language="SCSS"],
 treechildren::-moz-tree-image(LanguageSCSS) {
-  list-style-image: url("koicon://ko-language/SCSS?size=24");
+  list-style-image: url("koicon://ko-language/SCSS");
 }
 .languageicon[language="Tcl"],
 treechildren::-moz-tree-image(LanguageTcl) {
-  list-style-image: url("koicon://ko-language/Tcl?size=24");
+  list-style-image: url("koicon://ko-language/Tcl");
 }
 .languageicon[language="Twig"],
 treechildren::-moz-tree-image(LanguageTwig) {
-  list-style-image: url("koicon://ko-language/Twig?size=24");
+  list-style-image: url("koicon://ko-language/Twig");
 }
 .languageicon[language="XML"],
 treechildren::-moz-tree-image(LanguageXML) {
-  list-style-image: url("koicon://ko-language/XML?size=24");
+  list-style-image: url("koicon://ko-language/XML");
 }
 .languageicon[language="XSLT"],
 treechildren::-moz-tree-image(LanguageXSLT) {
-  list-style-image: url("koicon://ko-language/XSLT?size=24");
+  list-style-image: url("koicon://ko-language/XSLT");
 }
 .languageicon[language="XBL"],
 treechildren::-moz-tree-image(LanguageXBL),
 .languageicon[language="XUL"],
 treechildren::-moz-tree-image(LanguageXUL) {
-  list-style-image: url("koicon://ko-language/XUL?size=24");
+  list-style-image: url("koicon://ko-language/XUL");
 }
 
 
