UI: Remove double border when using light color schemes
(integrated from master branch change 9.2.1-631-gcfdea70 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -97,6 +97,11 @@
     
     @background-statusbar:      @background-primary;
     @border-statusbar:          darken(@background, 10%);
+    
+    view tabbox:not(.tabs-bottom) > tabs
+    {
+        border-top: 0 !important;
+    }
 }
 
 .setVars();
