Icons: Properly color new toolbar icons - fixes #762
(integrated from master branch change 9.2.1-644-gb440f4e by Nathan
Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -175,6 +175,7 @@
 @icon-server-pref:              url("chrome://komodo/skin/global/images/serverAccount.png");
 @icon-run-command:              url("koicon://ko-svg/chrome/icomoon/skin/console.svg@{icon-suffix}");
 @icon-power:                    url("koicon://ko-svg/chrome/icomoon/skin/power.svg@{icon-suffix}");
+@icon-markdown:                 url("koicon://ko-svg/chrome/icomoon/skin/text-color.svg@{icon-suffix}");
 @icon-print:                    url("koicon://ko-svg/chrome/icomoon/skin/print.svg@{icon-suffix}");
 @icon-pin:                      url("koicon://ko-svg/chrome/icomoon/skin/pushpin.svg@{icon-suffix}");
 @icon-pin-selected:             url("koicon://ko-svg/chrome/icomoon/skin/pushpin.svg@{icon-selected-suffix}"); /* OSX Only */
@@ -218,6 +219,9 @@
 @icon-toolbar-ishell:           url("koicon://ko-svg/chrome/icomoon/skin/console.svg@{icon-toolbar-suffix}");
 @icon-toolbar-tcldevkit:        url("koicon://ko-svg/chrome/icomoon/skin/quill3.svg@{icon-toolbar-suffix}");
 @icon-toolbar-perldevkit:       url("koicon://ko-svg/chrome/icomoon/skin/ko_perl.svg@{icon-toolbar-suffix}");
+@icon-toolbar-docs:             url("koicon://ko-svg/chrome/icomoon/skin/book2.svg@{icon-toolbar-suffix}");
+@icon-toolbar-power:            url("koicon://ko-svg/chrome/icomoon/skin/power.svg@{icon-toolbar-suffix}");
+@icon-toolbar-markdown:         url("koicon://ko-svg/chrome/icomoon/skin/text-color.svg@{icon-toolbar-suffix}");
 
 /* Toolbars - Workspace */
 @icon-toolbar-toggle-left-pane:         url("koicon://ko-svg/chrome/icomoon/skin/ko_layout-left3.svg@{icon-toolbar-suffix}");
