--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -497,6 +497,11 @@ page .cog-icon,
     list-style-image: @icon-power;
 }
 
+.icon-markdown
+{
+    list-style-image: @icon-markdown;
+}
+
 .next-buffer-icon
 {
     list-style-image: @icon-next-buffer;
@@ -742,6 +747,21 @@ treechildren::-moz-tree-image(remotefile)
     .ishell-icon
     {
         list-style-image: @icon-toolbar-ishell !important;
+    }
+    
+    .docs-icon
+    {
+        list-style-image: @icon-toolbar-docs !important;
+    }
+    
+    .power-icon
+    {
+        list-style-image: @icon-toolbar-power !important;
+    }
+    
+    .icon-markdown
+    {
+        list-style-image: @icon-toolbar-markdown !important;
     }
 
     #tb_tdkTclMenu
