UI: Get rid of border on some HUD elements
(integrated from master branch change 9.2.1-650-gd73dbd1 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -11,6 +11,7 @@
     color: @hud-foreground;
     border-radius: @hud-border-radius;
     box-shadow: @hud-shadow;
+    border-width: 0;
     
     &.statusbar
     {
