UI: Fix dropmarker appearance on windows
(integrated from master branch change 9.2.1-652-g4a2663a by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -208,6 +208,8 @@ menulist dropmarker, textbox[type="autocomplete"] dropmarker,
 .toolbarbutton-menu-dropmarker
 {
     -moz-appearance: none !important;
+    background-color: transparent;
+    border: 0;
     list-style-image: @icon-dropmarker !important;
     width: 14px;
     height: 14px;
