Console: Fix miss-typed css rule
(integrated from master branch change 9.2.1-654-g94cd082 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/console/content/less/console.less
+++ b/src/modules/console/content/less/console.less
@@ -190,7 +190,7 @@ ul, li
             
             li.prototype
             {
-                paddin-left: 6px;
+                padding-left: 6px;
                 opacity: 0.6;
                 font-style: italic;
             }
