Notify: Size icons properly
(integrated from master branch change 9.2.1-665-g0d90dfc by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -95,17 +95,17 @@
         {
             &.menu
             {
-                background: url(koicon://ko-svg/chrome/icomoon/skin/cog2.svg?preset=hud) center left no-repeat !important;
+                background-image: url(koicon://ko-svg/chrome/icomoon/skin/cog2.svg?preset=hud) !important;
             }
     
             &.undo
             {
-                background: url(koicon://ko-svg/chrome/icomoon/skin/undo2.svg?preset=hud) center left no-repeat !important;
+                background-image: url(koicon://ko-svg/chrome/icomoon/skin/undo2.svg?preset=hud) !important;
             }
             
             &.close
             {
-                background: url(koicon://ko-svg/chrome/icomoon/skin/close2.svg?preset=hud) center left no-repeat !important;
+                background-image: url(koicon://ko-svg/chrome/icomoon/skin/close2.svg?preset=hud) !important;
             }
         }
     }
