--- a/src/chrome/komodo/skin/plat/mac/menus.less
+++ b/src/chrome/komodo/skin/plat/mac/menus.less
@@ -1,4 +1,5 @@
 @import url("chrome://komodo/skin/plat/shared/menus.less");
+@import url("chrome://komodo/skin/plat/shared/icons_depend.less");
 
 /**
  * File Status within menu items.
@@ -21,6 +22,13 @@ menu, menuitem
         width: 16px;
         margin-left: -21px !important;
     }
+}
+
+:not(menulist) > menupopup > menuitem[checked="true"] > .menu-iconic-left,
+:not(menulist) > menupopup > menuitem[selected="true"] > .menu-iconic-left
+{
+    background-image: @icon-checkbox-small-checked;
+    background-size: 16px;
 }
 
 menuitem[type="checkbox"] > .menu-iconic-left
