--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -80,6 +80,8 @@
         cursor: pointer;
         transition: all 0.2s ease;
         background-size: 16px !important;
+        background-repeat: no-repeat;
+        background-position: center;
 
         dropmarker
         {
