UI: Highlight focused elements in the HUD - fixes #883
rn=

(integrated from master branch change 9.2.1-719-g4589ae1 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -164,6 +164,11 @@
             border-color: @border !important;
         }
     }
+    
+    :-moz-any(textbox, menulist, button, checkbox):focus
+    {
+        outline: 1px dotted @special !important;
+    }
 
     ::-moz-selection {
         color: @special-fore !important;
