Notifications: Corner notifications should not be too wide
rn=

(integrated from master branch change 9.2.1-728-gc6fab96 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -40,6 +40,11 @@
     {
         padding: 4px;
         font-size: 0.9rem;
+        
+        description
+        {
+            max-width: 350px !important;
+        }
     }
     
     &.lint
