--- a/src/chrome/komodo/skin/global/colors.less
+++ b/src/chrome/komodo/skin/global/colors.less
@@ -1,24 +1,27 @@
 @dark: 1;
-@background: #042B37;
-@foreground: #839496;
-@primary: #04242D;
-@secondary: #073642;
-@special: #2AA198;
-@border: #073642;
-@highlight: #0F3440;
-@selected: #1B7171;
+@background: #21242A;
+@foreground: #FFF;
+@primary: #1C1E21;
+@secondary: #1C1E21;
+@special: #3F8AFF;
+@border: #292C32;
+@highlight: #3F8AFF;
+@selected: #326ECD;
 @selected-fg: #FFF;
-@folder: #CB4B16;
-@textbox: #0C3543;
-@caption: #2AA198;
-@button-primary: #1B6EA3;
-@button: #0C4662;
+@folder: #FFF;
+@textbox: #1C1E21;
+@textbox-foreground: #FFF;
+@textbox-special: #FFF;
+@textbox-foreground-special: #444444;
+@caption: #FFF;
+@button-primary: #326ECD;
+@button: #326ECD;
 @button-fg: #FFF;
-@icons: #C8C8C8;
+@icons: #FFF;
 @icons-selected: #FFF;
-@icons-special: #2AA198;
+@icons-special: #3F8AFF;
 
-@escaped-icons: %23C8C8C8;
+@escaped-icons: %23FFF;
 @escaped-icons-selected: %23FFF;
-@escaped-folder: %23CB4B16;
-@escaped-icons-special: %232AA198;
+@escaped-folder: %23FFF;
+@escaped-icons-special: %23FFF;
