UI: Moved statusbar into the editor-view
(integrated from master branch change 9.2.1-713-g222c775 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -52,6 +52,11 @@
 #second-toolboxrow
 {
     width: ~"calc(50vw - 175px)";
+    
+    toolbar
+    {
+        -moz-binding: url("chrome://browser/content/customizableui/toolbar.xml#toolbar-drag");
+    }
 }
 
 #second-toolboxrow > hbox
@@ -113,7 +118,8 @@
 
 statusbar
 {
-    border-top: 1px solid @border;
+    height: 32px;
+    border-bottom: 1px solid @border;
     background: @primary;
 
     statusbarpanel > label
