--- a/src/modules/breadcrumbs/skin/breadcrumbs.less
+++ b/src/modules/breadcrumbs/skin/breadcrumbs.less
@@ -1,6 +1,7 @@
+[anonid="statusbar-message-deck-default"]
 @import url("chrome://komodo/skin/_config/window.less");
 
-#breadcrumbBar
+[anonid="breadcrumbBar"]
 {
     overflow: hidden;
     -moz-appearance: none;
@@ -83,7 +84,7 @@
         }
     }
 
-    #breadcrumbOverflowBtn
+    [anonid="breadcrumbOverflowBtn"]
     {
         dropmarker
         {
