UI: Made windows chromeless and draggable
(integrated from master branch change 9.2.1-714-gea4d72b by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/bindings.less
+++ b/src/chrome/komodo/skin/global/bindings.less
@@ -1,5 +1,10 @@
+window:not(#komodo_main)
+{
+  -moz-binding: url("chrome://komodo/content/bindings/windows.xml#window-chromeless");
+}
+
 #toolbox_main {
-  -moz-binding: url("chrome://komodo/content/bindings/toolbar.xml#toolbox");
+  -moz-binding: url("chrome://komodo/content/bindings/toolbar.xml#toolbox-drag");
 }
 
 toolbar[printpreview="true"] {
