--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -1,9 +1,34 @@
 @import url("chrome://komodo/skin/global/global.less");
 /* Komodo Toolbox */
 
+:root[hidechrome="true"]
+{
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+:root[hidechrome="true"] .window-wrapper
+{
+    padding: 5px;
+    
+    & > titlebar
+    {
+        padding-bottom: 5px;
+    }
+}
+
+:root[hidechrome="true"][titlebar="false"] .window-wrapper
+{
+    padding: 10px;
+    
+    & > titlebar
+    {
+        visibility: collapse;
+    }
+}
+
 #toolbox_main
 {
-    background: @primary;
     border: 0;
     padding: 4px;
     background: @special;
@@ -52,11 +77,6 @@
 #second-toolboxrow
 {
     width: ~"calc(50vw - 175px)";
-    
-    toolbar
-    {
-        -moz-binding: url("chrome://browser/content/customizableui/toolbar.xml#toolbar-drag");
-    }
 }
 
 #second-toolboxrow > hbox
