UI: Implement chromeless window resizing
(integrated from master branch change 9.2.1-715-g667f855 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -3,6 +3,7 @@
 @import url("chrome://komodo/skin/global/reset.less");
 @import url("chrome://komodo/skin/global/normalize.less");
 @import url("chrome://komodo/skin/global/bindings.less");
+@import url("chrome://komodo/skin/global/chromeless.less");
 @import url("chrome://komodo/skin/global/icons.less");
 
 @import url("chrome://komodo/skin/global/components/buttons.less");
