--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
 	font-family: 'icomoon';
-	src:url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?5wfn4l');
-	src:url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?5wfn4l#iefix') format('embedded-opentype'),
-		url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?5wfn4l') format('truetype'),
-		url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?5wfn4l') format('woff'),
-		url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?5wfn4l#icomoon') format('svg');
+	src:url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?wlb9xy');
+	src:url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?wlb9xy#iefix') format('embedded-opentype'),
+		url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?wlb9xy') format('truetype'),
+		url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?wlb9xy') format('woff'),
+		url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?wlb9xy#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -301,6 +301,11 @@
 		content: @icon-power2;
 	}
 }
+.icon-menu3 {
+	&:before {
+		content: @icon-menu3;
+	}
+}
 .icon-sphere2 {
 	&:before {
 		content: @icon-sphere2;
@@ -331,9 +336,24 @@
 		content: @icon-plus-circle2;
 	}
 }
+.icon-minus-circle2 {
+	&:before {
+		content: @icon-minus-circle2;
+	}
+}
 .icon-info2 {
 	&:before {
 		content: @icon-info2;
+	}
+}
+.icon-cancel-circle2 {
+	&:before {
+		content: @icon-cancel-circle2;
+	}
+}
+.icon-cross3 {
+	&:before {
+		content: @icon-cross3;
 	}
 }
 .icon-checkmark {
@@ -376,9 +396,24 @@
 		content: @icon-stop2;
 	}
 }
+.icon-arrow-up3 {
+	&:before {
+		content: @icon-arrow-up3;
+	}
+}
 .icon-arrow-right2 {
 	&:before {
 		content: @icon-arrow-right2;
+	}
+}
+.icon-arrow-right3 {
+	&:before {
+		content: @icon-arrow-right3;
+	}
+}
+.icon-arrow-down3 {
+	&:before {
+		content: @icon-arrow-down3;
 	}
 }
 .icon-arrow-left2 {
