--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -53,13 +53,17 @@
 @icon-lab: "\ebea";
 @icon-briefcase3: "\ec04";
 @icon-power2: "\ec49";
+@icon-menu3: "\ec6d";
 @icon-sphere2: "\ec92";
 @icon-earth2: "\ec97";
 @icon-question4: "\ed56";
 @icon-plus2: "\ed5b";
 @icon-plus-circle: "\ed5f";
 @icon-plus-circle2: "\ed61";
+@icon-minus-circle2: "\ed62";
 @icon-info2: "\ed64";
+@icon-cancel-circle2: "\ed66";
+@icon-cross3: "\ed6e";
 @icon-checkmark: "\ed6f";
 @icon-checkmark2: "\ed70";
 @icon-play3: "\ed7e";
@@ -68,7 +72,10 @@
 @icon-play4: "\ed85";
 @icon-pause2: "\ed86";
 @icon-stop2: "\ed87";
+@icon-arrow-up3: "\edb9";
 @icon-arrow-right2: "\edbc";
+@icon-arrow-right3: "\edbd";
+@icon-arrow-down3: "\edc1";
 @icon-arrow-left2: "\edc4";
 @icon-arrow-up5: "\edc7";
 @icon-arrow-right5: "\edc8";
