--- a/src/chrome/komodo/skin/global/bindings.less
+++ b/src/chrome/komodo/skin/global/bindings.less
@@ -1,4 +1,4 @@
-window:not(#komodo_main)
+window:not(#komodo_main).dialog
 {
   -moz-binding: url("chrome://komodo/content/bindings/windows.xml#window-chromeless");
 }
